Fix alignment     - cards padding     - section 2 padding     - chart 3 sizing and alignment     - remove white space before the footer

--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -11,10 +11,12 @@
         --yellow: #f3d100;
     }
 
-    @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto+Mono:wght@300&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
     @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&display=swap");
     * {
-        font-family: 'PT Sans', sans-serif;
+        /* font-family: 'PT Sans', sans-serif;*/
+        font-family: 'Roboto', sans-serif;
         scroll-behavior: smooth;
         margin: 0;
         padding: 0;
@@ -225,6 +227,7 @@
         grid-row: 2/3;
         grid-column: 1/3;
         background-color: var(--lightteal);
+        padding-bottom: 3%;
     }
     
     .section3 {
@@ -401,7 +404,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
         gap: 1em 5em;
-        padding: 5% 10% 0 10%;
+        padding: 5% 10% 5% 10%;
     }
     
     .scene1,
@@ -607,6 +610,7 @@
         background-color: var(--ashblue);
         transform: rotateY(180deg);
     }
+
     /*birds-pictures*/
     
     .bird {
@@ -618,8 +622,8 @@
         font-size: 60px;
         color: var(--white);
         text-align: center;
-        margin-top: 70px;
-        margin-bottom: 60px;
+        margin-top: 6%;
+        margin-bottom: 3.5%;
     }
     /*Footer*/
     
@@ -644,7 +648,6 @@
         text-align: left;
         font: bold 16px sans-serif;
         padding: 50px 50px 60px 50px;
-        margin-top: 80px;
     }
     
     .footer-distributed .footer-left,
@@ -828,8 +831,8 @@
         text-align: center;
         font-size: 30px;
         color: var(--white);
-        margin-bottom: 30px;
-        margin-top: 70px;
+        margin-bottom: 1%;
+        margin-top: 6%;
     }
     
     #save-the-birds {
@@ -880,8 +883,12 @@
     }
     
     #chartdiv1 {
-        width: 100%;
+        width: 50%;
         height: 600px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 1%;
     }
 
     #chartdiv {
@@ -918,6 +925,7 @@
     .charts{
         display: flex;
         justify-content: space-around;
+        margin-top: 4%;
     }
 
     .chart2{
